--- a/css/styles.css
+++ b/css/styles.css
@@ -135,9 +135,11 @@ color: #2E2F42;
     padding-top: 188px;
     padding-bottom: 188px;
     background-size: cover;
-    width: 1440px;
+    max-width: 1440px;
     height: 600px;
     margin: auto;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .general-species-list{
 padding-top: 120px;
