--- a/css/styles.css
+++ b/css/styles.css
@@ -130,14 +130,21 @@ color: #2E2F42;
 /* main */
 /*general*/
 .general-section {
-    background-image:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7) ), url(../images/hero.jpg);
-    background-color: #2E2F42;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-size: cover;
-    width: 1440px;
-    height: 600px;
-    margin: auto;
+        background: #2E2F42;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding: 188px 0 188px 0;
+        text-align: center;
+        max-width: 1440px;
+        margin: 0 auto;
+        background-image: linear-gradient(
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)
+        ),
+        url('../images/hero.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
 }
 .general-species-list{
 padding-top: 120px;
@@ -183,17 +190,20 @@ padding-bottom: 120px;
     color: var(--white);
 }
 /* section1 */
-.cosmo-icon-list {
+.feature-icons {
     display: flex;
     justify-content: center;
     column-gap: 24px;
 }
-.cosmo-list-link{
+.cosmo-icon {
 display: flex;
 justify-content:center;
 align-items: center;
 width: 264px;
 height: 112px;
+background-color: #f4f4fd;
+border-radius: 4px;
+margin-bottom: 8px;
 }
 .hiden-index {
     position: absolute;
