--- a/css/styles.css
+++ b/css/styles.css
@@ -361,18 +361,38 @@ margin-bottom: 8px;
 }
 
 /* foorer */
+.title-body-medium {
+font-weight: 500;
+    line-height: 1.5;
+    font-size: 16px;
+}
+.footer-container {
+    align-items: baseline;
+    display: flex;
+    gap: 120px;
+}
+.footer-social-container {
+    display: block;
+}
+.social-text {
+    margin-bottom: 16px;
+    color: white;
+}
+.social-list-footer {
+    gap: 16px;
+}
 .footer-logo
 {
     margin-bottom: 16px;
 }
 .footer-top-page{
     background-color: #2E2F42;
-   
+    
 }
 .page-footer {
-    background-color: #2E2F42;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    background: #2E2F42;
+    height: 312px;
+    padding: 100px 0 100px 0;
 }
 .info-footer {
 font-family: 'Roboto', sans-serif;
