--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,11 @@ button {
     padding-right: 15px;
     margin: 0 auto;
   }
+  .header {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);;
+  }
 /* hrader */
 .page-header {
     padding-top:24px;
@@ -450,6 +455,9 @@ margin-top: 16px;
     background: #404BBF;
     cursor: pointer;
     border: 1px solid transparent;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .list-button {
     display: flex;
