--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ button {
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);;
   }
-/* hrader */
+/* header */
 .page-header {
     padding-top:24px;
     padding-bottom: 24px;
@@ -456,8 +456,8 @@ margin-top: 16px;
     cursor: pointer;
     border: 1px solid transparent;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .list-button {
     display: flex;
