--- a/css/styles.css
+++ b/css/styles.css
@@ -444,9 +444,20 @@ img {
   background: #404bbf;
   cursor: pointer;
   border: 1px solid transparent;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+.button-item:hover,
+.button-item:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-link {
+    display: block;
+}
+.portfolio-link:focus,
+.portfolio-link:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+   
+
 .list-button {
   display: flex;
   justify-content: center;
