--- a/css/styles.css
+++ b/css/styles.css
@@ -356,8 +356,8 @@ img {
     fill: currentColor;
    
 }
-.customers-list-link:hover .customers-list-icon,
-.customers-list-link:focus .customers-list-icon {
+.customers-list-link:hover,
+.customers-list-link:focus {
     border-color: #404bbf;
     color: #404bbf;
 }
